==> VentoTran/HUST_GraduationProject_2022_2/FIRMWARE/GATEWAY/Core/Src/sx1278.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include <stdlib.h>
#include <math.h>
#include <stdbool.h>
#include <time.h>
#include "main.h"
#include "cmsis_os.h"
#include "spi.h"
#include "gpio.h"
#include "sx1278.h"
#include "common.h"
#include "event_groups.h"

uint8_t sx1278_read_reg(uint8_t reg)
{
	uint8_t txByte = reg & 0x7f;
	uint8_t rxByte = 0x00;
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, GPIO_PIN_RESET);
	HAL_SPI_Transmit(&hspi1, &txByte, 1, 1000);
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
	HAL_SPI_Receive(&hspi1, &rxByte, 1, 1000);
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, GPIO_PIN_SET);
    return rxByte;
}

void sx1278_write_reg(uint8_t reg, uint8_t val)
{
	uint8_t ureg = reg | 0x80;
	HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, GPIO_PIN_RESET);
	HAL_SPI_Transmit(&hspi1, &ureg, 1, 1000);
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
	HAL_SPI_Transmit(&hspi1, &val, 1, 1000);
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
	HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, GPIO_PIN_SET);
}

void sx1278_reset(void)
{
    HAL_GPIO_WritePin(GPIOC,GPIO_PIN_4, GPIO_PIN_RESET);
    vTaskDelay(10 / portTICK_RATE_MS);
    HAL_GPIO_WritePin(GPIOC,GPIO_PIN_4,GPIO_PIN_SET);
    vTaskDelay(10 / portTICK_RATE_MS);
}
